<resources>
    <string name="app_name">MusicApp</string>
    <string name="song_name">Có em bên đời bổng vui</string>
    <string name="single_name">Chillies</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register">Do you have an account ?</string>
    <string name="registerr">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_reset_passwordd">Send email</string>
    <string name="turn_back">Back</string>

</resources>