<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="horizontal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="0dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/imageicon"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:background="@color/black"
            android:src="@drawable/img_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.619"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.232" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="304dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageUsername"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSignIn"
            app:tint="@color/colorHint" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/grey"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imageUsername"
            app:layout_constraintEnd_toEndOf="@id/textSignIn"
            app:layout_constraintStart_toEndOf="@id/imageUsername"
            app:layout_constraintTop_toTopOf="@id/imageUsername" />

        <View
            android:id="@+id/viewDividerUsername"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorHint"
            app:layout_constraintEnd_toEndOf="@id/textSignIn"
            app:layout_constraintStart_toStartOf="@id/textSignIn"
            app:layout_constraintTop_toBottomOf="@id/inputUsername" />

        <ImageView
            android:id="@+id/imagePassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/key"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDividerUsername"
            app:tint="@color/colorHint" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/grey"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imagePassword"
            app:layout_constraintEnd_toEndOf="@+id/textSignIn"
            app:layout_constraintStart_toEndOf="@+id/imagePassword"
            app:layout_constraintTop_toTopOf="@+id/imagePassword" />

        <View
            android:id="@+id/viewDividerPassword"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorHint"
            app:layout_constraintEnd_toEndOf="@id/textSignIn"
            app:layout_constraintStart_toStartOf="@id/textSignIn"
            app:layout_constraintTop_toBottomOf="@id/inputPassword" />

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputUsername"
            app:layout_constraintVertical_bias="0.404" />



        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="253dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorHint"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputUsername"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"

                android:textColor="@color/colorHint"
                android:textSize="15dp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/textRegisterr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="128dp"
                android:text="@string/registerr"
                android:textColor="#4CAF50"
                android:textSize="15dp"
                android:textStyle="bold"
               />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>